part_2/ex_201/pingpong-application/manifests/pingpong-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-app
  template:
    metadata:
      labels:
        app: pingpong-app
    spec:
      containers:
        - name: pingpong-app
          image: cdaniel999/pingpong-app:latest
          imagePullPolicy: "Always"
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
