part_2/ex_201/pingpong-application/manifests/pingpong-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-app-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong-app
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
